working on subcategory js

--- a/index.html
+++ b/index.html
@@ -33,18 +33,36 @@
   </div>
   <div class="lower-navbar">
     <div class="lower-navbar-links">
-      <a href="#" id="navbar-learning" class="nav-link">Development</a>
-      <a href="#" id="navbar-learning" class="nav-link">Business</a>
-      <a href="#" id="navbar-learning" class="nav-link">Finance & Accounting</a>
-      <a href="#" id="navbar-learning" class="nav-link">IT & Software</a>
-      <a href="#" id="navbar-learning" class="nav-link">IT & Software</a>
-      <a href="#" id="navbar-learning" class="nav-link">Office Productivity</a>
-      <a href="#" id="navbar-learning" class="nav-link">Personal Development</a>
-      <a href="#" id="navbar-learning" class="nav-link">Design</a>
-      <a href="#" id="navbar-learning" class="nav-link">Marketing</a>
-      <a href="#" id="navbar-learning" class="nav-link">Health & Fitness</a>
-      <a href="#" id="navbar-learning" class="nav-link">Music</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower development-link" data-subcat="development">Development</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower business-link">Business</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower">Finance & Accounting</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower">IT & Software</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower">IT & Software</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower">Office Productivity</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower">Personal Development</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower">Design</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower">Marketing</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower">Health & Fitness</a>
+      <a href="#" id="navbar-learning" class="nav-link nav-link-lower">Music</a>
     </div>
   </div>
+  <div class="subcategory-navbar hidden">
+    <div id="subcategory-development" class="hidden"> 
+      <a href="#" class="nav-link subcategory-navbar-link development">Web Development</a>
+      <a href="#" class="nav-link subcategory-navbar-link">Mobile Development</a>
+      <a href="#" class="nav-link subcategory-navbar-link">Programming Languages</a>
+      <a href="#" class="nav-link subcategory-navbar-link">Game Development</a>
+      <a href="#" class="nav-link subcategory-navbar-link">Database Design & Development</a>
+      <a href="#" class="nav-link subcategory-navbar-link">Software Testing</a>
+    </div>
+    <div id="subcategory-business" class="hidden">   
+      <a href="#" class="nav-link subcategory-navbar-link">Entrepreneurship</a>
+      <a href="#" class="nav-link subcategory-navbar-link">Communications</a>
+      <a href="#" class="nav-link subcategory-navbar-link">Management</a>
+      <a href="#" class="nav-link subcategory-navbar-link">Sales</a>
+      <a href="#" class="nav-link subcategory-navbar-link">Business Strategy</a>
+    </div>    
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
